--- a/src/App.css
+++ b/src/App.css
@@ -5,48 +5,26 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+body {
+  background-color: rgb(232, 213, 253);
 }
 
 .table {
   width: 100%;
   border-collapse: collapse;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 .table th,
 .table td {
   border: 1px solid black;
   padding: 8px;
+}
+
+.button:hover {
+  transition: background 300ms, box-shadow 300ms;
+}
+
+.button:hover {
+  box-shadow: 3px 3px 1px rgba(0, 0, 0, 0.3);
 }
